--- a/MediaPlayer/MediaPlayer.csproj
+++ b/MediaPlayer/MediaPlayer.csproj
@@ -60,6 +60,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Equalizer.cs" />
+    <Compile Include="EqualizerBand.cs" />
+    <Compile Include="EqualizerHandler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +79,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sound.cs" />
     <Compile Include="SoundFile.cs" />
+    <Compile Include="ViewModelBase.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
