--- a/MediaPlayer/MediaPlayer.csproj
+++ b/MediaPlayer/MediaPlayer.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="NAudio, Version=1.8.4.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NAudio.1.8.4\lib\net35\NAudio.dll</HintPath>
@@ -111,6 +114,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\good_times_rg.ttf" />
     <None Include="Resources\Play.png" />
   </ItemGroup>
   <ItemGroup>
@@ -123,6 +127,7 @@
     <None Include="Resources\Shuffle.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\still_time.ttf" />
     <None Include="Resources\Volume.png" />
   </ItemGroup>
   <ItemGroup>
